--- a/src/main/resources/dev/below/schoolportfolio/main-page.fxml
+++ b/src/main/resources/dev/below/schoolportfolio/main-page.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.below.schoolportfolio.MainPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="326.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="674.0" minWidth="10.0" prefWidth="674.0" />
@@ -39,11 +39,18 @@
                   <Font name="Arial" size="24.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+            <Button fx:id="createPupilButton" mnemonicParsing="false" onAction="#createPupilButtonClicked" prefHeight="25.0" prefWidth="25.0" text="+" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Button>
             <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" />
                </GridPane.margin>
+               <content>
+                  <VBox fx:id="pupilsList" alignment="CENTER" prefHeight="642.0" prefWidth="317.0" />
+               </content>
             </ScrollPane>
          </children>
       </GridPane>
@@ -96,27 +103,27 @@
                         <Font name="Arial" size="14.0" />
                      </font>
                   </Label>
-                  <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <DatePicker fx:id="birthDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </DatePicker>
-                  <TextField maxWidth="130.0" prefWidth="130.0" GridPane.columnIndex="1">
+                  <TextField fx:id="nameTestField" maxWidth="130.0" prefWidth="130.0" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField maxWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="surnameTextField" maxWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </TextField>
-                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <ChoiceBox fx:id="subjectPicker" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </ChoiceBox>
-                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <ChoiceBox fx:id="gradePicker" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
@@ -147,6 +154,7 @@
             <GridPane gridLinesVisible="true" GridPane.columnSpan="2" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
