--- a/src/main/resources/dev/below/schoolportfolio/main-page.fxml
+++ b/src/main/resources/dev/below/schoolportfolio/main-page.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -54,15 +55,16 @@
             </ScrollPane>
          </children>
       </GridPane>
-      <GridPane GridPane.columnIndex="1">
+      <GridPane fx:id="pupilInfo" visible="false" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="335.0" minWidth="10.0" prefWidth="329.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="345.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="430.0" minHeight="10.0" prefHeight="340.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="336.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="430.0" minHeight="10.0" prefHeight="343.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="299.0" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="451.0" minHeight="10.0" prefHeight="288.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane GridPane.columnIndex="1">
@@ -103,55 +105,34 @@
                         <Font name="Arial" size="14.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="birthDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <DatePicker fx:id="birthDatePicker" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </DatePicker>
-                  <TextField fx:id="nameTestField" maxWidth="130.0" prefWidth="130.0" GridPane.columnIndex="1">
+                  <TextField fx:id="nameTextField" maxWidth="130.0" prefWidth="130.0" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="surnameTextField" maxWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="surnameTextField" maxWidth="130.0" prefWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </TextField>
-                  <ChoiceBox fx:id="subjectPicker" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <ComboBox fx:id="subjectPicker" editable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
-                  </ChoiceBox>
-                  <ChoiceBox fx:id="gradePicker" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  </ComboBox>
+                  <ComboBox fx:id="gradePicker" editable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
-                  </ChoiceBox>
+                  </ComboBox>
                </children>
             </GridPane>
-            <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="TOP">
-               <image>
-                  <Image url="@../../../../../../../../../Multimedia/Images/other/1699711804_new_изображение_2023-11-11_181628698.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets top="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <Label text="Документы:" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-            </Label>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Изменить фото" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets right="14.0" />
-               </GridPane.margin>
-            </Button>
-            <GridPane gridLinesVisible="true" GridPane.columnSpan="2" GridPane.rowIndex="2">
+            <GridPane gridLinesVisible="true" prefWidth="664.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints />
@@ -159,17 +140,69 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin>
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnSpan="2">
+                   <TableView fx:id="filesTable" prefHeight="200.0" prefWidth="200.0">
+                       <columns>
+                           <TableColumn fx:id="documentsColumn" prefWidth="660.0" resizable="false" text="Документы" />
+                       </columns>
+                   </TableView>
+               </children>
+            </GridPane>
+            <Button mnemonicParsing="false" onAction="#savePupilInfo" prefHeight="25.0" prefWidth="114.0" text="Сохранить" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#deletePupil" prefHeight="25.0" prefWidth="114.0" text="Удалить ученика" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets right="130.0" />
+               </GridPane.margin>
+            </Button>
+            <GridPane>
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="5.0" minWidth="10.0" prefWidth="5.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="14.0" minWidth="10.0" prefWidth="14.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints maxHeight="314.0" minHeight="9.0" prefHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="300.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fx:id="photoBox" fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
-                  </VBox>
+                  </ImageView>
+                  <Button mnemonicParsing="false" onAction="#changePupilPhoto" prefHeight="25.0" prefWidth="101.0" text="Изменить фото" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <GridPane gridLinesVisible="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
                </children>
-               <GridPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" />
-               </GridPane.margin>
             </GridPane>
+            <Button mnemonicParsing="false" onAction="#deleteDocument" prefHeight="25.0" prefWidth="132.0" text="Удалить документ" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#addDocument" prefHeight="25.0" prefWidth="132.0" text="Добавить документ" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="147.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
